first chapter of the book

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,39 @@
 *.class
 *.log
+
+# sbt specific
+.cache/
+.history/
+.lib/
+dist/*
+lib_managed/
+src_managed/
+project/boot/
+project/target/
+project/project/
+project/plugins/project/
+/*/target
+/target
+/target/*
+/.idea/*
+
+# bsp specific
+.bsp/
+
+# IntelliJ IDEA specific
+.idea
+.idea/*
+
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+.project
+.cache
+.classpath
+.settings
+.cache-main
+.cache-tests
+/bin/
+
+# OS/X specific
+.DS_Store
